[gd_scene load_steps=5 format=3 uid="uid://csf4fvsoekj0y"]

[ext_resource type="Texture2D" uid="uid://c3b74gqf51sru" path="res://Sprites/SpritesEntorno/WhatsApp Image 2025-07-17 at 10.49.31 AM.jpeg" id="1_4di8f"]
[ext_resource type="Script" uid="uid://byf2t1frojatb" path="res://Scripts/menu.gd" id="1_ilhvm"]
[ext_resource type="AudioStream" uid="uid://batcxh08c5fp8" path="res://Musica/Gameplay_PantallaCarga_Masterizada.mp3" id="3_7kx5r"]
[ext_resource type="Texture2D" uid="uid://44se87ekcos2" path="res://Sprites/Assets/Botones2.png" id="4_7kx5r"]

[node name="MENU" type="Node2D"]
script = ExtResource("1_ilhvm")

[node name="MainMenu" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(578, 326)
scale = Vector2(0.755077, 0.755077)
texture = ExtResource("1_4di8f")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_7kx5r")
autoplay = true

[node name="CONTROLES_BUTTON" type="MenuButton" parent="."]
self_modulate = Color(1, 0.542667, 0.02, 1)
top_level = true
z_index = 2
anchors_preset = -1
anchor_left = -0.0355903
anchor_right = -0.0355903
offset_left = 826.0
offset_top = 536.0
offset_right = 968.0
offset_bottom = 567.0
scale = Vector2(2.57028, 2.81105)
pivot_offset = Vector2(1, 0)
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "CONTROLES"
metadata/_edit_use_anchors_ = true

[node name="Botones2" type="Sprite2D" parent="."]
position = Vector2(984.5, 624.75)
scale = Vector2(2.165, 1.4375)
texture = ExtResource("4_7kx5r")

[node name="JUGAR_BUTTON" type="MenuButton" parent="."]
self_modulate = Color(1, 0.542667, 0.02, 1)
top_level = true
z_index = 2
offset_left = 88.0
offset_top = 180.0
offset_right = 159.0
offset_bottom = 211.0
scale = Vector2(3.08195, 3.37065)
pivot_offset = Vector2(1, 0)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "JUGAR"

[node name="Botones3" type="Sprite2D" parent="."]
position = Vector2(218.727, 287.15)
scale = Vector2(2.03727, 1.5915)
texture = ExtResource("4_7kx5r")

[node name="Botones4" type="Sprite2D" parent="."]
position = Vector2(642.887, 626.555)
scale = Vector2(2.39887, 1.57555)
texture = ExtResource("4_7kx5r")

[node name="SALIR_BUTTON" type="MenuButton" parent="."]
self_modulate = Color(1, 0.542667, 0.02, 1)
top_level = true
z_index = 2
offset_left = 494.99997
offset_top = 525.00006
offset_right = 566.0
offset_bottom = 556.00006
scale = Vector2(3.08195, 3.37065)
pivot_offset = Vector2(1, 0)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "SALIR"
